src/test/resources/org/shirolang/interpreter/errors/option_selected_as_default_doesnt_exist.sro
node Options[b] begin
    option input a Double(100.2)
end